Kind/nodeproj/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nodejs
    spec:
      containers:
      - args:
        - ./wait-for.sh
        - db:27017
        - --
        - /home/node/app/node_modules/.bin/nodemon
        - app.js
        image: mrmagik/node-kubernetes
        name: nodejs
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
